--- a/client/index.html
+++ b/client/index.html
@@ -17,13 +17,13 @@
   </header>
   
   <nav class="page-nav">
-    <a class="page-nav__day page-nav__day_today" href="#">
+    <a class="page-nav__day page-nav__day_chosen" href="#">
       <span class="page-nav__day-week"></span><span class="page-nav__day-number"></span>
     </a>
     <a class="page-nav__day" href="#">
       <span class="page-nav__day-week"></span><span class="page-nav__day-number"></span>
     </a>
-    <a class="page-nav__day page-nav__day_chosen" href="#">
+    <a class="page-nav__day" href="#">
       <span class="page-nav__day-week"></span><span class="page-nav__day-number"></span>
     </a>
     <a class="page-nav__day" href="#">
