--- a/client/hall.html
+++ b/client/hall.html
@@ -123,8 +123,8 @@
         </div>
         <div class="conf-step__legend">
           <div class="col">
-            <p class="conf-step__legend-price"><span class="conf-step__chair conf-step__chair_standart"></span> Свободно (<span class="conf-step__legend-value price-standart">250</span>руб)</p>
-            <p class="conf-step__legend-price"><span class="conf-step__chair conf-step__chair_vip"></span> Свободно VIP (<span class="conf-step__legend-value price-vip">350</span>руб)</p>            
+            <p class="conf-step__legend-price"><span class="conf-step__chair conf-step__chair_standart"></span> Свободно (<span class="conf-step__legend-value price-standart"></span>руб)</p>
+            <p class="conf-step__legend-price"><span class="conf-step__chair conf-step__chair_vip"></span> Свободно VIP (<span class="conf-step__legend-value price-vip"></span>руб)</p>            
           </div>
           <div class="col">
             <p class="conf-step__legend-price"><span class="conf-step__chair conf-step__chair_taken"></span> Занято</p>
@@ -135,7 +135,6 @@
       <button class="acceptin-button"  >Забронировать</button>
     </section>     
   </main>
-  <script src="js/createRequest.js"></script>
-  <script src="js/hall.js"></script>
+  <script src="js/requests.js"></script>
 </body>
 </html>
