--- a/client/hall.html
+++ b/client/hall.html
@@ -21,9 +21,9 @@
     <section class="buying">
       <div class="buying__info">
         <div class="buying__info-description">
-          <h2 class="buying__info-title">Звёздные войны XXIII: Атака клонированных клонов</h2>
-          <p class="buying__info-start">Начало сеанса: 18:30</p>
-          <p class="buying__info-hall">Зал 1</p>          
+          <h2 class="buying__info-title"></h2>
+          <p class="buying__info-start"></p>
+          <p class="buying__info-hall"></p>          
         </div>
         <div class="buying__info-hint">
           <p>Тапните дважды,<br>чтобы увеличить</p>
@@ -31,7 +31,7 @@
       </div>
       <div class="conf-step">
         <div class="conf-step__wrapper">
-          <div class="conf-step__row">
+          <!-- <div class="conf-step__row">
             <span class="conf-step__chair conf-step__chair_disabled"></span><span class="conf-step__chair conf-step__chair_disabled"></span>
             <span class="conf-step__chair conf-step__chair_disabled"></span><span class="conf-step__chair conf-step__chair_disabled"></span>
               <span class="conf-step__chair conf-step__chair_disabled"></span><span class="conf-step__chair conf-step__chair_standart"></span>
@@ -119,7 +119,7 @@
               <span class="conf-step__chair conf-step__chair_taken"></span><span class="conf-step__chair conf-step__chair_taken"></span>
               <span class="conf-step__chair conf-step__chair_standart"></span><span class="conf-step__chair conf-step__chair_standart"></span>
               <span class="conf-step__chair conf-step__chair_standart"></span><span class="conf-step__chair conf-step__chair_standart"></span>
-            </div>
+            </div> -->
         </div>
         <div class="conf-step__legend">
           <div class="col">
