--- a/client/ticket.html
+++ b/client/ticket.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-
+  <script src="/client/js/QRCreator.js" defer></script>
 </head>
 
 <body>
@@ -26,10 +26,10 @@
       </header>
       
       <div class="ticket__info-wrapper">
-        <p class="ticket__info">На фильм: <span class="ticket__details ticket__title">Звёздные войны XXIII: Атака клонированных клонов</span></p>
-        <p class="ticket__info">Ряд/Место: <span class="ticket__details ticket__chairs">6/7, 6/8</span></p>
-        <p class="ticket__info">В зале: <span class="ticket__details ticket__hall">1</span></p>
-        <p class="ticket__info">Начало сеанса: <span class="ticket__details ticket__start">18:30</span></p>
+        <p class="ticket__info">На фильм: <span class="ticket__details ticket__title"></span></p>
+        <p class="ticket__info">Ряд/Место: <span class="ticket__details ticket__chairs"></span></p>
+        <p class="ticket__info">В зале: <span class="ticket__details ticket__hall"></span></p>
+        <p class="ticket__info">Начало сеанса: <span class="ticket__details ticket__start"></span></p>
 
         <img class="ticket__info-qr" src="i/qr-code.png">
 
