--- a/client/hall.html
+++ b/client/hall.html
@@ -135,6 +135,7 @@
       <button class="acceptin-button"  >Забронировать</button>
     </section>     
   </main>
-  <script src="js/requests.js"></script>
+  <script src="js/requests.js" defer></script>
+
 </body>
 </html>
