--- a/client/payment.html
+++ b/client/payment.html
@@ -37,7 +37,7 @@
       </div>
     </section>     
   </main>
-  <script src="/client/js/requests.js"></script>
-  <script src="/client/js/payment.js"></script>
+  <script src="js/requests.js"></script>
+  <script src="js/payment.js"></script>
 </body>
 </html>
