--- a/client/ticket.html
+++ b/client/ticket.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-  <script src="/client/js/QRCreator.js" defer></script>
+  <script src="js/QRCreator.js" defer></script>
 </head>
 
 <body>
