--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </div>     
     </section>      -->
   </main>
-  <script src = "client/js/requests.js"></script>
+  <script src = "client/js/requests.js" defer></script>
   <script src="client/js/index.js" defer></script>
 </body>
 </html>
